# Compiler

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  test1  test2  test3
Testing/Temporary/: CTestCostData.txt
src/: compiler.cpp
src/headers/: ast.hpp  token.hpp
tests/samples/: test1.red  test2.red
